# proxy

./: .env.example  .gitignore  CONTRIBUTING.md  IMPLEMENTATION_ROADMAP.md  LICENSE  README.md  REFACTORING_PLAN.md  ROADMAP.md  STOPWORD_EVENT_ROADMAP.md  benchmark_copilot_latency.py  copilot-instructions.md  proxy  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: anti-self-listening.md  audio-io.md  configuration.md  copilot-integration.md  elevenlabs-websocket-migration-roadmap.md  elevenlabs-websocket-migration.md  event-bus-and-orchestrator.md  lifecycle.md  project-launch-roadmap.md  speech-to-text.md  state-machine.md  tts-pipeline.md  wake-sound-context-roadmap.md  wake-word-and-vad.md
docs/roadmaps/: channel-terminal-ui.md  local-model-integration.md
proxy/: config.py  main.py  types.py
proxy/audio/: assets.py  playback.py  wake_vad.py
proxy/copilot/: bridge.py  session_pool.py
proxy/observability/: logger.py  timing.py
proxy/orchestrator/: engine.py  event_bus.py  state_machine.py
proxy/stt/: deepgram_adapter.py
proxy/tts/: elevenlabs_adapter.py
scripts/: install-service.sh
src/proxy/: __init__.py  config.py  main.py  types.py
tars/: __init__.py  config.py  main.py  types.py
tars/audio/: __init__.py  assets.py  io.py  playback.py  wake_vad.py
tars/control/: commands.py  hotkeys.py
tars/copilot/: bridge.py  contract.py  parser.py  session_pool.py
tars/observability/: logger.py  (+2 more)
tars_voice_assistant.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
(+36 files in other folders)
