[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tars-voice-assistant"
version = "0.1.0"
description = "Wake-word voice orchestrator for Copilot CLI coding sessions."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "TARS Project" }]
dependencies = [
  "numpy>=1.26.0",
  "sounddevice>=0.4.7",
  "vosk>=0.3.45",
  "websockets>=12.0",
  "elevenlabs>=1.7.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
tars = "tars.main:cli"

[tool.setuptools.packages.find]
include = ["tars*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
