[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "proxy-voice"
version = "0.1.0"
description = "Give your coding agent a voice. Wake word, speech-to-text, agent, text-to-speech — all streaming, all low-latency."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
  "numpy>=1.26.0",
  "sounddevice>=0.4.7",
  "vosk>=0.3.45",
  "websockets>=12.0",
  "elevenlabs>=1.7.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
proxy = "proxy.main:cli"

[tool.setuptools.packages.find]
where = ["src"]
include = ["proxy*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["src"]
